[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Enemies/Bullets/Laser0.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Final/Laser0.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.19879, 212.931 )

[node name="Laser0" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 196.293 )
scale = Vector2( 1, 9.01198 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 200 )
shape = SubResource( 1 )

[node name="ClearTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_Laser0_area_entered"]
[connection signal="timeout" from="ClearTimer" to="." method="_on_ClearTimer_timeout"]
